--- a/stylesheets/typography.css
+++ b/stylesheets/typography.css
@@ -22,9 +22,7 @@
 	NAME OF FONTS FOR SAFARI
 	--------------------------------------- */
 
-/* ---------------------------------------
-	ELEMENT-LEVEL DECLARATIONS
-	--------------------------------------- */
+/* !Element-level Declarations */
 
 	html {
 		font-size: 100.01%; /* fixes some browser bugs (IE, Opera) see http://www.communitymx.com/content/article.cfm?cid=FAF76&print=true for more info */
@@ -97,9 +95,7 @@
 		font-style: italic;
 	}
 	
-/* ---------------------------------------
-	SITEWIDE
-	--------------------------------------- */
+/* !Sitewide Delcarations */
 	
 	.caps {
 		text-transform: uppercase;
