--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -1,3 +1,10 @@
+/* -----------------------------------------------------------------------------
+
+	©2010 Joseph Bergantine. All rights reserved. Released under Creative Commons BY-SA 3.0 United States.
+	(http://creativecommons.org/licenses/by-sa/3.0/us/)
+
+	---------------------------------------------------------------------------- */
+
 @import 'normalize.css';
 @import 'typography.css';
 
