--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -1,6 +1,6 @@
 /* -----------------------------------------------------------------------------
 
-	©2010 Joseph Bergantine. All rights reserved. Released under Creative Commons BY-SA 3.0 United States.
+	(c)2010 Joseph Bergantine. All rights reserved. Released under Creative Commons BY-SA 3.0 United States.
 	(http://creativecommons.org/licenses/by-sa/3.0/us/)
 
 	---------------------------------------------------------------------------- */
