changed copyright symbol to be github friendly

--- a/stylesheets/normalize.css
+++ b/stylesheets/normalize.css
@@ -14,7 +14,7 @@
 	+ 2009-11-18 + removed outline: none; from :focus ... accessibility issues
 	+ 2008-11-19 + removed content: none; from blockquote:before, blockquote:after, q:before, q:after { ... as it was invalid
 	
-	©2010 Joseph Bergantine. All rights reserved. Released under Creative Commons BY-SA 3.0 United States.
+	(c)2010 Joseph Bergantine. All rights reserved. Released under Creative Commons BY-SA 3.0 United States.
 	(http://creativecommons.org/licenses/by-sa/3.0/us/)
 
 	---------------------------------------------------------------------------- */
