fixed a typo in the documentation

--- a/stylesheets/normalize.css
+++ b/stylesheets/normalize.css
@@ -7,6 +7,7 @@
 	+ Transcending CSS by Andy Clarke (pg.158)
 
 	changelog
+	+ 2010-07-30 + fixed a typo in the documentation
 	+ 2010-01-31 + updated documentation of ins and del
 				 + removed some normalization from sub and sup
 	+ 2009-12-18 + removed redundant resets near the bottom (img & fieldset border = none, abbr & acronym border = none)
@@ -81,7 +82,7 @@ sub, sup {
 
 /* -----------------------------------------------------------------------------
 
-	REMEMBER, TABLES STILL NEED 'cellspacing="0" cellspacing="0"' IN THE MARKUP 
+	REMEMBER, TABLES STILL NEED 'cellpadding="0" cellspacing="0"' IN THE MARKUP 
 
 	---------------------------------------------------------------------------- */
 
